--- a/colab.research.google.com/TensorFlow_with_TPU.ipynb
+++ b/colab.research.google.com/TensorFlow_with_TPU.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/natemurthy/misc/blob/master/colab.research.google.com/TensorFlow_with_GPU.ipynb)"
+        "[View in Colaboratory](https://colab.research.google.com/github/natemurthy/misc/blob/master/colab.research.google.com/TensorFlow_with_TPU.ipynb)"
       ]
     },
     {
