[colab] update tpu_bench example

--- a/colab.research.google.com/TensorFlow_with_TPU.ipynb
+++ b/colab.research.google.com/TensorFlow_with_TPU.ipynb
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 255
         },
-        "outputId": "3a97f3e6-edbf-40c1-8ea7-6f68f01d9887"
+        "outputId": "9f39f326-02e7-4540-af35-5b66089826c3"
       },
       "cell_type": "code",
       "source": [
@@ -71,7 +71,7 @@
         {
           "output_type": "stream",
           "text": [
-            "TPU address is grpc://10.22.86.138:8470\n",
+            "TPU address is grpc://10.88.167.34:8470\n",
             "TPU devices:\n"
           ],
           "name": "stdout"
@@ -80,18 +80,18 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[_DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:CPU:0, CPU, -1, 5367837999772260330),\n",
-              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:XLA_CPU:0, XLA_CPU, 17179869184, 10100309180633096616),\n",
-              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:XLA_GPU:0, XLA_GPU, 17179869184, 16957089878897873948),\n",
-              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:0, TPU, 17179869184, 15576818800597952368),\n",
-              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:1, TPU, 17179869184, 6563325799648670620),\n",
-              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:2, TPU, 17179869184, 280552207182685731),\n",
-              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:3, TPU, 17179869184, 11447240344446465732),\n",
-              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:4, TPU, 17179869184, 13831751451533610930),\n",
-              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:5, TPU, 17179869184, 12942592464113598861),\n",
-              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:6, TPU, 17179869184, 3691822185360145325),\n",
-              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:7, TPU, 17179869184, 4567373785046838763),\n",
-              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU_SYSTEM:0, TPU_SYSTEM, 17179869184, 17045378757071738747)]"
+              "[_DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:CPU:0, CPU, -1, 2281670037145131072),\n",
+              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:XLA_CPU:0, XLA_CPU, 17179869184, 13807851505998351146),\n",
+              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:XLA_GPU:0, XLA_GPU, 17179869184, 3944772797432058268),\n",
+              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:0, TPU, 17179869184, 17714854462510958240),\n",
+              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:1, TPU, 17179869184, 665208171217960325),\n",
+              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:2, TPU, 17179869184, 6533028385901265362),\n",
+              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:3, TPU, 17179869184, 16388292411800194333),\n",
+              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:4, TPU, 17179869184, 12406510216455477463),\n",
+              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:5, TPU, 17179869184, 10737372197915247225),\n",
+              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:6, TPU, 17179869184, 15275568485172419690),\n",
+              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:7, TPU, 17179869184, 8769948176964923723),\n",
+              " _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU_SYSTEM:0, TPU_SYSTEM, 17179869184, 8397750535524825822)]"
             ]
           },
           "metadata": {
@@ -146,7 +146,7 @@
         "  session.run(tf.contrib.tpu.shutdown_system())\n",
         "  session.close()"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
         "  session.run(tf.contrib.tpu.shutdown_system())\n",
         "  session.close()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "85881d36-a5e8-41b0-fa76-79d8b3838d94"
+        "outputId": "9314b263-afae-4328-b469-0c22077da4ef"
       },
       "cell_type": "code",
       "source": [
@@ -302,9 +302,9 @@
           "text": [
             "Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images (batch x height x width x channel). Sum of ten runs.\n",
             "CPU (s):\n",
-            "10.55410370300001\n",
+            "8.3415292640002\n",
             "TPU (s):\n",
-            "1.433097946000089\n",
+            "1.1416582869999274\n",
             "TPU speedup over CPU: 7x\n"
           ],
           "name": "stdout"
@@ -317,31 +317,40 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 187
         },
-        "outputId": "5f2d91b8-3716-4d2e-a2a8-ac33cd5ee8fa"
+        "outputId": "ddfe4535-a021-49d0-edfc-16197127b1f1"
       },
       "cell_type": "code",
       "source": [
         "def bench_tpu():\n",
-        "  X = tf.random_normal([2000000, 10000], mean=-1, stddev=4)\n",
-        "  Y = tf.random_normal([10000, 1], mean=-1, stddev=4)\n",
+        "  X = tf.random_normal([2000000, 1000], mean=-1, stddev=4)\n",
+        "  Y = tf.random_normal([1000, 1], mean=-1, stddev=4)\n",
         "\n",
         "  with tf.Session('grpc://' + os.environ['COLAB_TPU_ADDR']) as sess:\n",
         "    sess.run(tf.matmul(X,Y))\n",
         "    sess.close()\n",
-        "    \n",
-        "print('TPU (s):')\n",
-        "tpu_time = timeit.timeit('bench_tpu()', number=1, setup=\"from __main__ import bench_tpu\")\n",
-        "print(tpu_time)\n"
+        "\n",
+        "for _ in range(5):\n",
+        "  print('TPU (s):')\n",
+        "  tpu_time = timeit.timeit('bench_tpu()', number=1, setup=\"from __main__ import bench_tpu\")\n",
+        "  print(tpu_time)\n"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "TPU (s):\n",
-            "24.28661741699989\n"
+            "2.358699079999951\n",
+            "TPU (s):\n",
+            "2.3190053270000135\n",
+            "TPU (s):\n",
+            "2.338227903999723\n",
+            "TPU (s):\n",
+            "2.3755409349996626\n",
+            "TPU (s):\n",
+            "2.3095780779999586\n"
           ],
           "name": "stdout"
         }
