[colab] update bench_gpu example

--- a/colab.research.google.com/TensorFlow_with_GPU.ipynb
+++ b/colab.research.google.com/TensorFlow_with_GPU.ipynb
@@ -47,7 +47,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "731b0168-7950-445d-a5a9-9ee4d3b10ef7"
+        "outputId": "bc745017-44a4-4437-8e79-b6eb05b19e4c"
       },
       "cell_type": "code",
       "source": [
@@ -57,7 +57,7 @@
         "  raise SystemError('GPU device not found')\n",
         "print('Found GPU at: {}'.format(device_name))"
       ],
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 139
         },
-        "outputId": "1b3822f1-7c3a-47bc-a81e-44b2629ff71e"
+        "outputId": "d003f85d-1d66-46e9-83cd-eef2d423ab2e"
       },
       "cell_type": "code",
       "source": [
@@ -147,17 +147,17 @@
         "\n",
         "sess.close()"
       ],
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images (batch x height x width x channel). Sum of ten runs.\n",
             "CPU (s):\n",
-            "9.305544716999975\n",
+            "10.234535588999279\n",
             "GPU (s):\n",
-            "0.18691899200001671\n",
-            "GPU speedup over CPU: 49x\n"
+            "0.15453657699981704\n",
+            "GPU speedup over CPU: 66x\n"
           ],
           "name": "stdout"
         }
@@ -169,15 +169,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 187
         },
-        "outputId": "e2ebccd4-c5da-4afe-9c54-840e3adcacb1"
+        "outputId": "58a82c2a-6118-4dd2-9138-e333ea798ad5"
       },
       "cell_type": "code",
       "source": [
         "def bench_gpu():\n",
-        "  X = tf.random_normal([100000, 100], mean=-1, stddev=4)\n",
-        "  Y = tf.random_normal([100, 1], mean=-1, stddev=4)\n",
+        "  X = tf.random_normal([2000000, 1024], mean=-1, stddev=4)\n",
+        "  Y = tf.random_normal([1024, 1], mean=-1, stddev=4)\n",
         "  \n",
         "  with tf.device('/gpu:0'):\n",
         "    config = tf.ConfigProto()\n",
@@ -186,18 +186,27 @@
         "    with tf.Session(config=config) as sess:\n",
         "      sess.run(tf.matmul(X,Y))\n",
         "      sess.close()\n",
-        "    \n",
-        "print('GPU (s):')\n",
-        "gpu_time = timeit.timeit('bench_gpu()', number=1, setup=\"from __main__ import bench_gpu\")\n",
-        "print(gpu_time)"
+        "\n",
+        "for _ in range(5):\n",
+        "  print('GPU (s):')\n",
+        "  gpu_time = timeit.timeit('bench_gpu()', number=1, setup=\"from __main__ import bench_gpu\")\n",
+        "  print(gpu_time)"
       ],
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "GPU (s):\n",
-            "0.5192209719998573\n"
+            "0.489989007000986\n",
+            "GPU (s):\n",
+            "0.432986609001091\n",
+            "GPU (s):\n",
+            "0.4209981680014607\n",
+            "GPU (s):\n",
+            "0.4212460660000943\n",
+            "GPU (s):\n",
+            "0.4217986290004774\n"
           ],
           "name": "stdout"
         }
