[colab] update TensorFlow_with_TPU.ipynb

--- a/colab.research.google.com/TensorFlow_with_TPU.ipynb
+++ b/colab.research.google.com/TensorFlow_with_TPU.ipynb
@@ -66,7 +66,7 @@
         "print ('TPU devices:')\n",
         "devices\n"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "9314b263-afae-4328-b469-0c22077da4ef"
+        "outputId": "3627e62e-44b0-4105-c9ab-43b3e3d6d5a2"
       },
       "cell_type": "code",
       "source": [
@@ -295,17 +295,17 @@
         "print(tpu_time)\n",
         "print('TPU speedup over CPU: {}x'.format(int(cpu_time/tpu_time)))"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images (batch x height x width x channel). Sum of ten runs.\n",
             "CPU (s):\n",
-            "8.3415292640002\n",
+            "10.720574680999562\n",
             "TPU (s):\n",
-            "1.1416582869999274\n",
-            "TPU speedup over CPU: 7x\n"
+            "1.2505764789966634\n",
+            "TPU speedup over CPU: 8x\n"
           ],
           "name": "stdout"
         }
@@ -317,24 +317,27 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
+          "height": 51
         },
-        "outputId": "ddfe4535-a021-49d0-edfc-16197127b1f1"
+        "outputId": "05d9972f-0ae0-44f1-8573-74fff638c859"
       },
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "import tensorflow as tf\n",
+        "import timeit\n",
+        "\n",
         "def bench_tpu():\n",
-        "  X = tf.random_normal([2000000, 1000], mean=-1, stddev=4)\n",
-        "  Y = tf.random_normal([1000, 1], mean=-1, stddev=4)\n",
+        "  X = tf.random_normal([2000000, 1024], mean=-1, stddev=4)\n",
+        "  Y = tf.random_normal([1024, 1], mean=-1, stddev=4)\n",
         "\n",
         "  with tf.Session('grpc://' + os.environ['COLAB_TPU_ADDR']) as sess:\n",
         "    sess.run(tf.matmul(X,Y))\n",
         "    sess.close()\n",
         "\n",
-        "for _ in range(5):\n",
-        "  print('TPU (s):')\n",
-        "  tpu_time = timeit.timeit('bench_tpu()', number=1, setup=\"from __main__ import bench_tpu\")\n",
-        "  print(tpu_time)\n"
+        "print('TPU (s):')\n",
+        "tpu_time = timeit.timeit('bench_tpu()', number=1, setup=\"from __main__ import bench_tpu\")\n",
+        "print(tpu_time)\n"
       ],
       "execution_count": 5,
       "outputs": [
@@ -342,15 +345,7 @@
           "output_type": "stream",
           "text": [
             "TPU (s):\n",
-            "2.358699079999951\n",
-            "TPU (s):\n",
-            "2.3190053270000135\n",
-            "TPU (s):\n",
-            "2.338227903999723\n",
-            "TPU (s):\n",
-            "2.3755409349996626\n",
-            "TPU (s):\n",
-            "2.3095780779999586\n"
+            "2.5198090830017463\n"
           ],
           "name": "stdout"
         }
