[colab] update TensorFlow_with_GPU.ipynb

--- a/colab.research.google.com/TensorFlow_with_GPU.ipynb
+++ b/colab.research.google.com/TensorFlow_with_GPU.ipynb
@@ -57,7 +57,7 @@
         "  raise SystemError('GPU device not found')\n",
         "print('Found GPU at: {}'.format(device_name))"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 139
         },
-        "outputId": "d003f85d-1d66-46e9-83cd-eef2d423ab2e"
+        "outputId": "595bf3a9-345d-40ec-d9c6-b2a91b4c832e"
       },
       "cell_type": "code",
       "source": [
@@ -147,17 +147,17 @@
         "\n",
         "sess.close()"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images (batch x height x width x channel). Sum of ten runs.\n",
             "CPU (s):\n",
-            "10.234535588999279\n",
+            "10.300373514\n",
             "GPU (s):\n",
-            "0.15453657699981704\n",
-            "GPU speedup over CPU: 66x\n"
+            "0.9068364750000057\n",
+            "GPU speedup over CPU: 11x\n"
           ],
           "name": "stdout"
         }
@@ -169,12 +169,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
+          "height": 51
         },
-        "outputId": "58a82c2a-6118-4dd2-9138-e333ea798ad5"
+        "outputId": "a5fd4a99-90e3-4668-ea43-41de666e7e56"
       },
       "cell_type": "code",
       "source": [
+        "import tensorflow as tf\n",
+        "import timeit\n",
+        "\n",
         "def bench_gpu():\n",
         "  X = tf.random_normal([2000000, 1024], mean=-1, stddev=4)\n",
         "  Y = tf.random_normal([1024, 1], mean=-1, stddev=4)\n",
@@ -187,26 +190,17 @@
         "      sess.run(tf.matmul(X,Y))\n",
         "      sess.close()\n",
         "\n",
-        "for _ in range(5):\n",
-        "  print('GPU (s):')\n",
-        "  gpu_time = timeit.timeit('bench_gpu()', number=1, setup=\"from __main__ import bench_gpu\")\n",
-        "  print(gpu_time)"
+        "print('GPU (s):')\n",
+        "gpu_time = timeit.timeit('bench_gpu()', number=1, setup=\"from __main__ import bench_gpu\")\n",
+        "print(gpu_time)"
       ],
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "GPU (s):\n",
-            "0.489989007000986\n",
-            "GPU (s):\n",
-            "0.432986609001091\n",
-            "GPU (s):\n",
-            "0.4209981680014607\n",
-            "GPU (s):\n",
-            "0.4212460660000943\n",
-            "GPU (s):\n",
-            "0.4217986290004774\n"
+            "0.5016209689999869\n"
           ],
           "name": "stdout"
         }
